--- a/templates/base.html
+++ b/templates/base.html
@@ -18,22 +18,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
+            <a class="navbar-brand" href="/">Flasky</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenticated %}
-                <li>
-                    <a href="{{ url_for('auth.logout') }}">Log Out</a>
-                </li>
-                {% else %}
-                <li>
-                    <a href="{{ url_for('auth.login') }}">Log In</a>
-                </li>
-                {% endif %}
+                <li><a href="/">Home</a></li>
             </ul>
         </div>
     </div>
